--- a/backend/package.json
+++ b/backend/package.json
@@ -7,16 +7,24 @@
     "dev": "nodemon --watch 'src/' --exec 'ts-node src/server.ts' -e ts"
   },
   "dependencies": {
+    "connect-mongo": "^4.4.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "mongoose": "^5.12.0",
+    "passport": "^0.4.1",
+    "passport-local-mongoose": "^6.1.0",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
-    "@types/humps": "^2.0.0",
+    "@types/express-session": "^1.17.3",
+    "@types/passport": "1.0.4",
+    "@types/passport-local-mongoose": "^4.0.13",
     "@types/shortid": "^0.0.29",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
