--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,16 +17,16 @@ services:
       - ./backend/node_modules:/app/node_modules
     depends_on:
       - mongodb
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile.dev
-  #   ports:
-  #     - 3000:3000
-  #   volumes:
-  #     - ./frontend/src:/app/src
-  #     - ./frontend/node_modules:/app/node_modules
-  #   stdin_open: true
-  #   tty: true
-  #   depends_on:
-  #     - backend
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+    ports:
+      - 3000:3000
+    volumes:
+      - ./frontend/src:/app/src
+      - ./frontend/node_modules:/app/node_modules
+    stdin_open: true
+    tty: true
+    depends_on:
+      - backend
